--- a/index.html
+++ b/index.html
@@ -4,21 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paginamolona</title>
+    <meta name="description" content="Aprende HTML y desarrollo web con las mejores prácticas." />
+    <meta name="keywords" content="HTML, CSS, desarrollo web, SEO, accesibilidad" />
+    <meta name="author" content="LucíaSanz" />
+    <meta name="robots" content="index, follow" />
 </head>
 <body>
-  <p id="saludo">Me gusta el pesacado frío</p>  
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p id="pollo">patatas con aceitunas</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
+  <header>
+    <h1>Mi Página Web</h1>
+    <nav>
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#productos">Contacto</a></li>
+            <li><a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a></li>
+            <li><a href="tel://:+603398663">telefono</a></li>
+            <li><a target="_blank"href="https://es.search.yahoo.com">buscar</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <section id="inicio">
+        <h2>Sobre Nosotros</h2>
+        <p>Bienvenido a nuestra página.</p>
+    </section>
+
+</main>
+<section id="productos">
+  <h2>Sobre nuestros productos</h2>
+  <p>son los mejores</p>
+</section>
+
+<footer>
+    <p>&copy; 2025 Mi Web</p>
+</footer>
+</body>
 </body>
 </html>
