cambios en el estilo (main.css)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="css/index.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paginamolona</title>
@@ -11,7 +12,19 @@
 </head>
 <body>
   <header>
-    <h1>Mi Página Web</h1>
+    <h1>Mi</h1> <h2>pagina</h2> <h3>WEB</h3>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     <nav>
         <ul>
             <li><a href="#inicio">Inicio</a></li>
@@ -25,13 +38,13 @@
 
 <main>
     <section id="inicio">
-        <h2>Sobre Nosotros</h2>
+        <h4>Sobre Nosotros</h4>
         <p>Bienvenido a nuestra página.</p>
     </section>
 
 </main>
 <section id="productos">
-  <h2>Sobre nuestros productos</h2>
+  <h4 class= "emphasis">Sobre nuestros productos</h4>
   <p>son los mejores</p>
 </section>
 
