--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="keywords" content="HTML, CSS, desarrollo web, SEO, accesibilidad" />
     <meta name="author" content="LucíaSanz" />
     <meta name="robots" content="index, follow" />
+    <link rel="icon" type="image/png" href="./assets/icon/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="./assets/icon/favicon/favicon.svg" />
+<link rel="shortcut icon" href="./assets/icon/favicon/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/favicon/apple-touch-icon.png" />
+<link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
+<meta name="theme-color" content="#ffffff" />
 </head>
 <body>
   <header>
@@ -31,7 +37,7 @@
             <li><a href="#productos">Contacto</a></li>
             <li><a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a></li>
             <li><a href="tel://:+603398663">telefono</a></li>
-            <li><a target="_blank"href="https://es.search.yahoo.com">buscar</a></li>
+            <li><a target="_blank" href="https://es.search.yahoo.com">buscar</a></li>
         </ul>
     </nav>
 </header>
@@ -41,16 +47,16 @@
         <h4>Sobre Nosotros</h4>
         <p>Bienvenido a nuestra página.</p>
     </section>
-
-</main>
 <section id="productos">
   <h4 class= "emphasis">Sobre nuestros productos</h4>
   <p>son los mejores</p>
 </section>
 
+
+</main>
+
+</body>
 <footer>
     <p>&copy; 2025 Mi Web</p>
 </footer>
-</body>
-</body>
 </html>
