--- a/index.html
+++ b/index.html
@@ -1,62 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <link rel="stylesheet" href="css/index.css" />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>paginamolona</title>
-    <meta name="description" content="Aprende HTML y desarrollo web con las mejores prácticas." />
-    <meta name="keywords" content="HTML, CSS, desarrollo web, SEO, accesibilidad" />
+    <meta
+      name="description"
+      content="Aprende HTML y desarrollo web con las mejores prácticas."
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, desarrollo web, SEO, accesibilidad"
+    />
     <meta name="author" content="LucíaSanz" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" type="image/png" href="./assets/icon/favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="./assets/icon/favicon/favicon.svg" />
-<link rel="shortcut icon" href="./assets/icon/favicon/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/favicon/apple-touch-icon.png" />
-<link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
-<meta name="theme-color" content="#ffffff" />
-</head>
-<body>
-  <header>
-    <h1>Mi</h1> <h2>pagina</h2> <h3>WEB</h3>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <nav>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/icon/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/icon/favicon/favicon.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="./assets/icon/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/icon/favicon/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
+  <body>
+    <header>
+      <h1>Mi</h1>
+      <h2>pagina</h2>
+      <h3>WEB</h3>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#productos">Contacto</a></li>
-            <li><a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a></li>
-            <li><a href="tel://:+603398663">telefono</a></li>
-            <li><a target="_blank" href="https://es.search.yahoo.com">buscar</a></li>
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#productos">Contacto</a></li>
+          <li>
+            <a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a>
+          </li>
+          <li><a href="tel://:+603398663">telefono</a></li>
+          <li>
+            <a target="_blank" href="https://es.search.yahoo.com">buscar</a>
+          </li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<main>
-    <section id="inicio">
+    <main>
+      <section id="inicio">
         <h4>Sobre Nosotros</h4>
         <p>Bienvenido a nuestra página.</p>
-    </section>
-<section id="productos">
-  <h4 class= "emphasis">Sobre nuestros productos</h4>
-  <p>son los mejores</p>
-</section>
-
-
-</main>
-
-</body>
-<footer>
+      </section>
+      <section id="productos">
+        <h4 class="emphasis">Sobre nuestros productos</h4>
+        <p>son los mejores</p>
+      </section>
+    </main>
+  </body>
+  <footer>
     <p>&copy; 2025 Mi Web</p>
-</footer>
+  </footer>
 </html>
