--- a/prueba/index.html
+++ b/prueba/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>paginamolona</title>
@@ -71,14 +71,17 @@
     </header>
 
     <main>
-      <section id="inicio">
-        <h4>Sobre Nosotros</h4>
-        <p>Bienvenido a nuestra página.</p>
-      </section>
-      <section id="productos">
-        <h4 class="emphasis">Sobre nuestros productos</h4>
-        <p>son los mejores</p>
-      </section>
+      <div class="flex-container">
+        <div class="flex-items">BOMBOCLAT</div>
+        <div class="flex-items">RASTACLAT</div>
+        <div class="flex-items">WETCLAT</div>
+        <div class="flex-items">JULIACLAT</div>
+      </div>
+      <div class="parent">
+        <div class="div1">CARLACLAT</div>
+        <div class="div2">HUGOCLAT</div>
+        <div class="div3">LUCIACLAT</div>
+      </div>
     </main>
   </body>
   <footer>
