cosas de tipografia

--- a/tipografria/index.html
+++ b/tipografria/index.html
@@ -5,9 +5,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="license" href="LICENSE.txt" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href=".../css/main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <title>paginamolona</title>
     <meta
       name="description"
@@ -43,49 +44,24 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <header>
-      <h1>Mi</h1>
-      <h2>pagina</h2>
-      <h3>WEB</h3>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <nav>
-        <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#productos">Contacto</a></li>
-          <li>
-            <a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a>
-          </li>
-          <li><a href="tel://:+603398663">telefono</a></li>
-          <li>
-            <a target="_blank" href="https://es.search.yahoo.com">buscar</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+	<header>
+		<h1><i class="fa-solid fa-face-smile"></i><p class="Outfit"></p>Guia de Tipografía Web</h1>
+		<p class="subtitulo"><p class="Outfit"></p> práctico de fuentes y animaciones CSS</p>
+	</header>
 
-    <main>
-      <section id="inicio">
-        <h4>Sobre Nosotros</h4>
-        <p>Bienvenido a nuestra página.</p>
-      </section>
-      <section id="productos">
-        <h4 class="emphasis">Sobre nuestros productos</h4>
-        <p>son los mejores</p>
-      </section>
-    </main>
-  </body>
-  <footer>
-    <p>&copy; 2025 Mi Web</p>
-  </footer>
-</html>
+	<main>
+		<section>
+			<h2>Historia</h2>
+			<p>Desde la Bauhaus hasta la era digital, la tipografía ha evolucionado ...</p>
+		</section>
+		<section>
+			<h2>Demostración</h2>
+			<p>
+				Esta
+				<span class="resaltar">palabra</span>
+				se resaltará estilo karaoke.
+			</p>
+			<p class="codigo">Fuente monoespaciada para código: console.log("Hola");</p>
+		</section>
+	</main>
+</body>
