--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
     />
     <link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap');
+      </style>
   </head>
   <body>
     <header>
-      <h1>Mi</h1>
-      <h2>pagina</h2>
-      <h3>WEB</h3>
       <p>&nbsp;</p>
+      <h1>LUCIACLAT</i></h1>
+      <h1></h1>
+      <h2><i class="fa-solid fa-joint"></i></h2>
+      <h2>whitejamaican</h2>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
@@ -75,10 +80,10 @@
     </header>
 
     <main>
-      <section id="inicio">
-        <h4>Sobre Nosotros</h4>
-        <p>Bienvenido a nuestra página.</p>
-      </section>
+      <section id="inicio"
+      
+      
+  
       <section id="productos">
         <h4 class="emphasis">Sobre nuestros productos</h4>
         <p>son los mejores</p>
