--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
       <h1></h1>
       <h2><i class="fa-solid fa-joint"></i></h2>
       <h2>whitejamaican</h2>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
+      <h3>HOLA</h3>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
