--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
     <link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap');
       </style>
   </head>
+  <input type="checkbox" id="theme-toggle" class="theme-toggle-button" hidden/>
   <body>
     <header>
+      <label for="theme-toggle" class="theme-toggle-button">theme-toggle</label>
       <p>&nbsp;</p>
       <h1>LUCIACLAT</i></h1>
       <h1></h1>
