responsive, roots.css

--- a/APUNTES/cachos/prueba/index.html
+++ b/APUNTES/cachos/prueba/index.html
@@ -1,90 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <link rel="stylesheet" href="../css/main.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>paginamolona</title>
-    <meta
-      name="description"
-      content="Aprende HTML y desarrollo web con las mejores prácticas."
-    />
-    <meta
-      name="keywords"
-      content="HTML, CSS, desarrollo web, SEO, accesibilidad"
-    />
-    <meta name="author" content="LucíaSanz" />
-    <meta name="robots" content="index, follow" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./assets/icon/favicon/favicon-96x96.png"
-      sizes="96x96"
-    />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./assets/icon/favicon/favicon.svg"
-    />
-    <link
-      rel="shortcut icon"
-      href="./assets/icon/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/icon/favicon/apple-touch-icon.png"
-    />
-    <link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
-    <meta name="theme-color" content="#ffffff" />
-  </head>
-  <body>
-    <header>
-      <h1>Mi</h1>
-      <h2>pagina</h2>
-      <h3>WEB</h3>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <nav>
-        <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#productos">Contacto</a></li>
-          <li>
-            <a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a>
-          </li>
-          <li><a href="tel://:+603398663">telefono</a></li>
-          <li>
-            <a target="_blank" href="https://es.search.yahoo.com">buscar</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
-      <div class="flex-container">
-        <div class="flex-items">BOMBOCLAT</div>
-        <div class="flex-items">RASTACLAT</div>
-        <div class="flex-items">WETCLAT</div>
-        <div class="flex-items">JULIACLAT</div>
-      </div>
-      <div class="parent">
-        <div class="div1">CARLACLAT</div>
-        <div class="div2">HUGOCLAT</div>
-        <div class="div3">LUCIACLAT</div>
-      </div>
-    </main>
-  </body>
-  <footer>
-    <p>&copy; 2025 Mi Web</p>
-  </footer>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Ejemplo Responsive</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<header>
+			<h1>Mi Sitio Web</h1>
+		</header>
+		<main class="contenedor">
+			<article class="columna">Contenido 1</article>
+			<article class="columna">Contenido 2</article>
+			<article class="columna">Contenido 3</article>
+		</main>
+		<footer>&copy; 2025 Mi Sitio Web</footer>
+	</body>
 </html>
