webs puestas en la practica (iframes)

--- a/SOW/Index.html
+++ b/SOW/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Interactivo</title>
+    <title>Práctica 1</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -25,39 +25,31 @@
             <p>Este es el contenido de la práctica.</p>
         </section>
         <section id="web1">
+            <h2>Contenido Web1</h2>
             <div class="iframe-container">
                 <iframe src="https://exat.hottype.co/" frameborder="0" allowfullscreen></iframe>
             </div>
-            
-            <style>
-                .iframe-container {
-                    position: relative;
-                    padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
-                    height: 0;
-                    overflow: hidden;
-                    max-width: 100%;
-                }
-                .iframe-container iframe {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                }
-            </style>
-            <h2>Contenido Web1</h2>
             <p>Este es el contenido de Web1.</p>
         </section>
         <section id="web2">
             <h2>Contenido Web2</h2>
+            <div class="iframe-container">
+                <iframe src="https://gehry.getty.edu/" frameborder="0" allowfullscreen></iframe>
+            </div>
             <p>Este es el contenido de Web2.</p>
         </section>
         <section id="web3">
             <h2>Contenido Web3</h2>
+            <div class="iframe-container">
+                <iframe src="https://www.gentlerain.ai/" frameborder="0" allowfullscreen></iframe>
+            </div>
             <p>Este es el contenido de Web3.</p>
         </section>
         <section id="web4">
             <h2>Contenido Web4</h2>
+            <div class="iframe-container">
+                <iframe src="https://orkenworld.com/" frameborder="0" allowfullscreen></iframe>
+            </div>
             <p>Este es el contenido de Web4.</p>
         </section>
     </main>
