cambiode la imagen que no se me veia

--- a/Analisis/Index.html
+++ b/Analisis/Index.html
@@ -29,7 +29,7 @@
                         Sanz
                     </h1>
                 </div>
-                <img src="/assets/imagenes/Ilustración_sin_título 21.jpg" alt="Descripción de la imagen" class="inicio-imagen">
+                <img src="https://ik.imagekit.io/luciasanz/Ilustracio%CC%81n_sin_ti%CC%81tulo%2021.jpg?updatedAt=1744791687338" alt="Descripción de la imagen" class="inicio-imagen">
         </section>
         <section id="web1">
             <hr>
