--- a/404.html
+++ b/404.html
@@ -45,9 +45,9 @@
 </head>
 <body>
     <p>&nbsp;</p>  
-    <p>Page Not Found</p>
+    <p>PAGINA NO ENCONTRADA</p>
     <p><a href="/">Go Back Home</a></p>
-    <img src="https://ik.imagekit.io/luciasanz/Lab_Valen%20(2).gif?updatedAt=1746625477368" alt="404 GIF"> 
+    <img src="https://ik.imagekit.io/luciasanz/Lab_Valen.gif?updatedAt=1746708009795" alt="404 GIF"> 
     
 </body>
 </html>
