--- a/APUNTES/cachos/prueba/index.html
+++ b/APUNTES/cachos/prueba/index.html
@@ -18,3 +18,97 @@
 		<footer>&copy; 2025 Mi Sitio Web</footer>
 	</body>
 </html>
+
+
+
+
+       <section id="proyecto1" class="project-section">
+            <h2>Proyecto 1: Labios</h2>
+            <p class="project-description">
+        Un estudio visual centrado en los labios como superficie expresiva.
+        Este proyecto explora textura, color y detalle desde lo mínimo. Cada imagen aísla la boca del resto del rostro para convertirla en el centro de la narrativa, como si hablara sin decir nada.
+        Brillo, crudeza y composición al límite: lo sensorial como mensaje.
+    </p>
+            <div class="project-gallery">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_C1858449-9F82-42A4-A7B4-163EAD794469.WEBP?updatedAt=1747200897135" alt="Labios 1">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_98A9EA6B-CCB0-4EAF-BCD4-FF6C35FB98C3%202.WEBP?updatedAt=1747200899103" alt="Labios 2">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_2043FC35-FB4C-488E-A199-F8615566B8B5.WEBP?updatedAt=1747200897167" alt="Labios 3">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_E12A0B9D-848B-4A32-8716-087902F00B90.WEBP?updatedAt=1747200896487" alt="Labios 4">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_45890B96-7324-4AF9-8ECA-13B4A7740437.WEBP?updatedAt=1747200894834" alt="Labios 5">
+            </div>
+        </section>
+
+        <!-- Proyecto 2: Proyecto Fotográfico -->
+        <section id="proyecto2" class="project-section">
+            <h2>Proyecto 2: Proyecto Fotográfico</h2>
+            <p class="project-description">
+        Serie de fotografías donde el maquillaje acompaña al gesto más que a la estética.
+        Rostros que no posan, que miran sin pedir permiso. Maquillajes que no buscan perfección, sino reforzar identidad, mirada y energía.
+        Un juego entre lo editorial y lo crudo, entre lo planeado y lo que aparece en el momento.
+    </p>
+            <div class="project-gallery">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_AB8488D0-845E-428C-8544-2080298D33F1%202.WEBP?updatedAt=1747200899409" alt="Fotografía 1">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_92F74D27-55D5-458C-A3CF-4CB3B004366C%202.WEBP?updatedAt=1747200899173" alt="Fotografía 2">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_BD7812B3-65E1-4BB9-9A62-7D7264CC0193.WEBP?updatedAt=1747200896410" alt="Fotografía 3">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_1861D1BF-D469-4273-9E63-6D4E72333277.WEBP?updatedAt=1747200894815" alt="Fotografía 4">
+                <img src="https://ik.imagekit.io/luciasanz/temp_image_4E9B8D8B-3547-4D36-807B-E5C0E66A506E.WEBP?updatedAt=1747200892057" alt="Fotografía 5">
+            </div>
+        </section>
+
+
+
+		<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 - Page Not Found</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+
+        body {
+            margin: 0;
+            font-family:'Courier New', Courier, monospace;
+            background-color: rgb(255, 255, 255);
+            color: black;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+        h1 {
+
+            font-size: 4rem;
+            margin: 1rem 0 0.5rem;
+        }
+        p {
+            font-family:'Courier New', Courier, monospace;
+            font-size: 2rem;
+            margin: 0.5rem 0;
+            font-weight: bold;
+        }
+        a {
+            color: rgb(255, 0, 0);
+            text-decoration: none;
+            font-weight: lighter;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        img {
+            max-width: 70%;
+            height: auto;
+            margin-bottom: 1rem;
+        }
+    </style>
+</head>
+<body>
+    <p>&nbsp;</p>  
+    <p>PAGINA NO ENCONTRADA</p>
+    <p><a href="/">Go Back Home</a></p>
+    <img src="https://ik.imagekit.io/luciasanz/Lab_Valen%202.gif?updatedAt=1747141266735" alt="404 GIF"> 
+    
+</body>
+</html>
