--- a/index.html
+++ b/index.html
@@ -1,116 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Makeup Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="license" href="LICENSE.txt" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>paginamolona</title>
-    <meta
-      name="description"
-      content="Aprende HTML y desarrollo web con las mejores prácticas."
-    />
-    <meta
-      name="keywords"
-      content="HTML, CSS, desarrollo web, SEO, accesibilidad"
-    />
-    <meta name="author" content="LucíaSanz" />
-    <meta name="robots" content="index, follow" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./assets/icon/favicon/favicon-96x96.png"
-      sizes="96x96"
-    />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./assets/icon/favicon/favicon.svg"
-    />
-    <link
-      rel="shortcut icon"
-      href="./assets/icon/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/icon/favicon/apple-touch-icon.png"
-    />
-    <link rel="manifest" href="assets/icon/favicon/site.webmanifest" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap');
-      </style>
-  </head>
-  <input type="checkbox" id="theme-toggle" class="theme-toggle-button" hidden/>
-  <body> 
-    <header>
-      <label for="theme-toggle" class="theme-toggle-button">theme-toggle</label>
-      <p>&nbsp;</p>
-      <h1>LUCIACLAT</i></h1>
-      <h1></h1>
-      <h2><i class="fa-solid fa-joint"></i></h2>
-      <h2>whitejamaican</h2>
-      <h3>HOLA</h3>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <nav>
-        <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#productos">Contacto</a></li>
-          <li>
-            <a href="mailto:sanzmartinezdesalinas2@gmail.com">escribeme</a>
-          </li>
-          <li><a href="tel://:+603398663">telefono</a></li>
-          <li>
-            <a target="_blank" href="https://es.search.yahoo.com">buscar</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <section>
-      
-<?xml version="1.0" encoding="utf-8"?>
+    <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/proyectofinal.css">
+</head>
+<body>
+   <div class="container">
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <div class="text cal-sans-regular">Makeup ARTIST Portfolio</div>
+    <a href="sobre-mi.html" class="menu-item4">Sobre mí</a>
+    <nav class="menu">
+        <a href="collabs.html" class="menu-item">Collabs</a>
+        <a href="proyectos-personales.html" class="menu-item">Proyectos Personales</a>
+        <a href="makeup-ilustrado.html" class="menu-item">Makeup Ilustrado</a>
+    </nav>
+    <img class="gif" src="https://ik.imagekit.io/luciasanz/Ilustracio%CC%81n_sin_ti%CC%81tulo.gif?updatedAt=1747091901419" alt="Makeup GIF">
+</div>
+</body>
 
-<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-<svg width="800px" height="800px" viewBox="0 -4 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-<g clip-path="url(#clip0_503_2569)">
-<rect width="28" height="20" rx="2" fill="white"/>
-<mask id="mask0_503_2569" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-<rect width="28" height="20" rx="2" fill="white"/>
-</mask>
-<g mask="url(#mask0_503_2569)">
-<rect width="28" height="20" fill="#1DBE4F"/>
-<path fill-rule="evenodd" clip-rule="evenodd" d="M0 0L12 10L0 20V0Z" fill="#262626"/>
-<path fill-rule="evenodd" clip-rule="evenodd" d="M28 0L16 10L28 20V0Z" fill="#262626"/>
-<path fill-rule="evenodd" clip-rule="evenodd" d="M14 8.39171L-1.28244 -1.91644L-2.77362 0.294324L11.6156 10L-2.77362 19.7057L-1.28244 21.9165L14 11.6083L29.2825 21.9165L30.7737 19.7057L16.3844 10L30.7737 0.294324L29.2825 -1.91644L14 8.39171Z" fill="#FFD646"/>
-</g>
-</g>
-<defs>
-<clipPath id="clip0_503_2569">
-<rect width="28" height="20" rx="2" fill="white"/>
-</clipPath>
-</defs>
-</svg>
-    </section>
-
-    <main>
-      <section id="inicio"section>
-    </main>
-  </body>
-  <footer>
-    <p>&copy; 2025 Mi Web</p>
-  </footer>
 </html>
